# xgsimulation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  xgsimulation.c  xgsimulation.pyx
.github/workflows/: test.yml
src/c/: constants.h  football.c  football.h  geometry.c  geometry.h  random_number.c  random_number.h  simulation.c  simulation.h
tests/: test_geometry.c  test_python.py  test_simulation.c
