[project]
name = "xgsimulation"
version = "0.0.1"
description = "Calculating xG by simulation."
authors = [
    {name = "Maciej Pastuszka"}
]
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[build-system]
requires = ["setuptools>=61.0", "cython", "numpy"]
build-backend = "setuptools.build_meta"
